Fix: Title text overflow

--- a/src/app/collections/collection-item/collection-item.component.css
+++ b/src/app/collections/collection-item/collection-item.component.css
@@ -25,6 +25,7 @@
     padding: 0;
     cursor: pointer;
     margin-right: 1.25rem;
+    flex-shrink: 0;
 }
 
 .collection-name,
